Bug #19493 NDB does not ignore duplicate keys when using LOAD DATA LOCAL - make sure to disable bulk insert when check for duplicate key is needed